[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["asynchronous", "database"]
description = "bb8 connection pooling impmentation for the MongoDB database"
documentation = "http://docs.rs/bb8-mongodb"
edition = "2024"
homepage = "http://github.com/rustyhorde/bb8-mongodb"
keywords = ["bb8", "async", "mongodb", "pool"]
license = "MIT OR Apache-2.0"
name = "bb8-mongodb"
readme = "README.md"
repository = "https://github.com/rustyhorde/bb8-mongodb"
version = "1.2.1"
rust-version = "1.85.1"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[package.metadata.cargo-matrix]
[[package.metadata.cargo-matrix.channel]]
name = "default"

[features]
unstable = []

[dependencies]
anyhow = "1.0.100"
bb8 = "0.9.0"
mongodb = "3.3.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
rustversion = "1.0.22"

[dev-dependencies]
futures = "0.3.31"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
